[gd_scene load_steps=5 format=3 uid="uid://deugktm1ghfkg"]

[ext_resource type="Script" path="res://main.gd" id="1_2e3dt"]
[ext_resource type="AudioStream" uid="uid://bsad2hbejlvnm" path="res://clunk.wav" id="2_jd71i"]
[ext_resource type="AudioStream" uid="uid://bu37lfqunksei" path="res://boop.wav" id="3_r4pjh"]
[ext_resource type="AudioStream" uid="uid://ca8bx61hlh6ys" path="res://pip.wav" id="4_wgfgk"]

[node name="Main" type="Node2D"]
script = ExtResource("1_2e3dt")

[node name="Score" type="CanvasLayer" parent="."]

[node name="HB" type="HBoxContainer" parent="Score"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/separation = 40

[node name="GameScore" type="Label" parent="Score/HB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Note" type="Label" parent="Score/HB"]
unique_name_in_owner = true
layout_mode = 2
text = "Move the bat with the arrow keys.

Hold the CTRL key for player AI.

Toggle sound: S"

[node name="Spacer1" type="Control" parent="Score/HB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerScore" type="Label" parent="Score/HB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 50
text = "00"
vertical_alignment = 1

[node name="Clunk" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_jd71i")

[node name="Boop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_r4pjh")

[node name="Pip" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wgfgk")

[connection signal="resized" from="Score/HB" to="." method="_on_hb_resized"]
